--- a/.github/workflows/build-module.yml
+++ b/.github/workflows/build-module.yml
@@ -1,207 +1,95 @@
-name: Create Release on Tag
+name: Build AmneziaWG (kernel 6.1.99, no SDK)
 
 on:
-  push:
-    tags:
-      - "v*.*.*"
-  workflow_call:
-    inputs:
-      tag_name:
-        required: true
-        type: string
   workflow_dispatch:
-    inputs:
-      version:
-        description: 'OpenWRT version (e.g., 24.10.5)'
-        required: true
-        type: string
-      targets:
-        description: 'Targets (comma-separated, optional)'
-        required: false
-        type: string
-      subtargets:
-        description: 'Subtargets (comma-separated, optional)'
-        required: false
-        type: string
-
 
 jobs:
-  generate-config:
+  build:
     runs-on: ubuntu-latest
-    outputs:
-      job-config: ${{ steps.generate-config.outputs.job-config }}
+
+    env:
+      KERNEL_VERSION: "6.1.99"
+      TARGET: "rockchip"
+      SUBTARGET: "armv8"
+      ARCH: "aarch64"
+      PKGARCH: "aarch64_generic"
+      TAG: "24.10.1"
+
     steps:
-      - name: Checkout code
+      - name: Checkout AWG source
         uses: actions/checkout@v4
-
-      - name: Set up Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: '20.16.0'
-
-      - name: Get OpenWRT version from inputs or tag
-        run: |
-          if [ "${{ github.event_name }}" = "workflow_dispatch" ]; then
-            echo "VERSION=${{ inputs.version }}" >> $GITHUB_ENV
-
-            if [ -n "${{ inputs.targets }}" ]; then
-              echo "TARGETS=${{ inputs.targets }}" >> $GITHUB_ENV
-            fi
-
-            if [ -n "${{ inputs.subtargets }}" ]; then
-              echo "SUBTARGETS=${{ inputs.subtargets }}" >> $GITHUB_ENV
-            fi
-
-          elif [ "${{ github.event_name }}" = "workflow_call" ]; then
-            echo "VERSION=${{ inputs.tag_name }}" >> $GITHUB_ENV
-
-          else
-            echo "VERSION=${GITHUB_REF/refs\/tags\/v/}" >> $GITHUB_ENV
-          fi
 
       - name: Install dependencies
-        run: npm install
-
-      - name: Generate Job Config
-        id: generate-config
-        run: node index.js ${{ env.VERSION }} "${{ env.TARGETS }}" "${{ env.SUBTARGETS }}"
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
-  build:
-    name: "v${{ matrix.build_env.tag }} - ${{ matrix.build_env.pkgarch}} :: ${{ matrix.build_env.target}}/${{ matrix.build_env.subtarget}} build"
-    runs-on: ubuntu-latest
-    needs: generate-config
-    strategy:
-      matrix:
-        build_env: ${{ fromJson(needs.generate-config.outputs.job-config) }}
-      fail-fast: false
-
-    steps:
-      - name: Checkout AWG source code
-        uses: actions/checkout@v4
-
-      - name: Install Python dependencies
         run: |
-          sudo apt-get update
-          sudo apt-get install -y python3-pyelftools
+          sudo apt update
+          sudo apt install -y build-essential bc kmod cpio flex bison libelf-dev libssl-dev zstd golang git
 
-      - name: Cache OpenWrt SDK
-        id: cache-sdk
-        uses: actions/cache@v4
-        env:
-          cache-name: "cache-sdk-${{ matrix.build_env.tag }}-${{ matrix.build_env.target}}-${{ matrix.build_env.subtarget}}"
-        with:
-          path: openwrt-sdk-*/
-          key: ${{ runner.os }}-sdk-${{ env.cache-name }}
-
-      - name: Download and extract OpenWrt SDK
-        if: steps.cache-sdk.outputs.cache-hit != 'true'
+      - name: Download kernel-debug (kernel headers)
         run: |
-          echo "pkgarch: ${{ matrix.build_env.pkgarch}}, target:${{ matrix.build_env.target}}, subtarget: ${{ matrix.build_env.subtarget}}"
+          wget https://downloads.openwrt.org/releases/${TAG}/targets/${TARGET}/${SUBTARGET}/kernel-debug.tar.zst
+          mkdir kernel
+          tar --zstd -xf kernel-debug.tar.zst -C kernel
 
-          # Get the actual SDK filename from the directory listing
-          SDK_FILE=$(curl -s "https://downloads.openwrt.org/releases/${{ matrix.build_env.tag }}/targets/${{ matrix.build_env.target}}/${{ matrix.build_env.subtarget}}/" | grep -o "openwrt-sdk-${{ matrix.build_env.tag }}-${{ matrix.build_env.target}}-${{ matrix.build_env.subtarget}}_gcc-[^\"]*_musl[^\"]*\.Linux-x86_64\.tar\.[xz|zst]*" | head -n1)
-          
-          if [ -z "$SDK_FILE" ]; then
-            echo "SDK file not found for ${{ matrix.build_env.tag }} ${{ matrix.build_env.target}} ${{ matrix.build_env.subtarget}}"
-            exit 1
-          fi
-          
-          SDK_DOWNLOAD_URL="https://downloads.openwrt.org/releases/${{ matrix.build_env.tag }}/targets/${{ matrix.build_env.target}}/${{ matrix.build_env.subtarget}}/${SDK_FILE}"
-          echo "Downloading SDK: $SDK_DOWNLOAD_URL"
-          
-          wget "$SDK_DOWNLOAD_URL"
-          
-          # Extract based on file extension
-          if [[ "$SDK_FILE" == *.tar.zst ]]; then
-            tar --zstd -xf "$SDK_FILE"
-          elif [[ "$SDK_FILE" == *.tar.xz ]]; then
-            tar -xf "$SDK_FILE"
-          else
-            echo "Unknown archive format: $SDK_FILE"
-            exit 1
-          fi
-          
-          rm "$SDK_FILE"
-
-      - name: Setup SDK and feeds
+      - name: Prepare kernel headers
         run: |
-          # Find SDK directory
-          SDK_DIR=$(find . -maxdepth 1 -name "openwrt-sdk-*" -type d | head -n1)
-          
-          if [ -z "$SDK_DIR" ]; then
-            echo "SDK directory not found"
-            exit 1
-          fi
-          
-          # Get absolute paths
-          WORKSPACE_DIR=$(pwd)
-          
-          cd "$SDK_DIR"
-          
-          # Update feeds to include LuCI
-          ./scripts/feeds update -a
-          ./scripts/feeds install -a
-          
-          # Copy current repository packages directly to package directory
-          cp -r "$WORKSPACE_DIR/kmod-amneziawg" package/
-          cp -r "$WORKSPACE_DIR/amneziawg-tools" package/
-          cp -r "$WORKSPACE_DIR/luci-proto-amneziawg" package/
-          
-          # Configure packages to build
-          echo "CONFIG_PACKAGE_kmod-amneziawg=m" > .config
-          echo "CONFIG_PACKAGE_amneziawg-tools=y" >> .config
-          echo "CONFIG_PACKAGE_luci-proto-amneziawg=y" >> .config
-          echo "CONFIG_PACKAGE_luci-i18n-amneziawg-ru=y" >> .config
-          
-          make defconfig
+          mkdir -p kernel_build
+          cp -r kernel/usr/src/linux-${KERNEL_VERSION} kernel_build/linux
+          cd kernel_build/linux
+          make olddefconfig
 
-      - name: Build AmneziaWG packages
+      - name: Build amneziawg kernel module
         run: |
-          # Find SDK directory
-          SDK_DIR=$(find . -maxdepth 1 -name "openwrt-sdk-*" -type d | head -n1)
-          cd "$SDK_DIR"
+          mkdir -p build
+          cd build
+          git clone https://github.com/amnezia-vpn/amneziawg-linux.git
+          cd amneziawg-linux/src
+          make -C ../../kernel_build/linux M=$(pwd) modules
 
-          echo "Building AmneziaWG packages..."
-
-          # Build kmod-amneziawg (kernel module)
-          echo "Building kmod-amneziawg..."
-          make package/kmod-amneziawg/{download,prepare} V=s || true
-          make package/kmod-amneziawg/compile V=s || true
-
-          # Build luci-proto-amneziawg (web interface)
-          echo "Building luci-proto-amneziawg..."
-          make package/luci-proto-amneziawg/{download,prepare} V=s
-          make package/luci-proto-amneziawg/compile V=s
-
-          # Build amneziawg-tools (userspace tools)
-          echo "Building amneziawg-tools..."
-          make package/amneziawg-tools/{download,prepare} V=s
-          make package/amneziawg-tools/compile V=s
-          
-          echo "Build completed. Checking for built packages..."
-          find bin/ -name "*.ipk" | grep -E "(amneziawg|luci-proto-amneziawg|luci-i18n-amneziawg)" | head -10
-
-      - name: Prepare artifacts
+      - name: Build amneziawg-tools
         run: |
-          # Find SDK directory
-          SDK_DIR=$(find . -maxdepth 1 -name "openwrt-sdk-*" -type d | head -n1)
-          
-          mkdir -p awgrelease
-          postfix="v${{ matrix.build_env.tag }}_${{ matrix.build_env.pkgarch}}_${{ matrix.build_env.target}}_${{ matrix.build_env.subtarget}}"
-          
-          # Copy built packages
-          find "$SDK_DIR/bin/packages" -name "amneziawg-tools_*.ipk" -exec cp {} awgrelease/amneziawg-tools_${postfix}.ipk \; || echo "amneziawg-tools package not found"
-          find "$SDK_DIR/bin/packages" -name "luci-proto-amneziawg_*.ipk" -exec cp {} awgrelease/luci-proto-amneziawg_${postfix}.ipk \; || echo "luci-proto-amneziawg package not found"
-          find "$SDK_DIR/bin/packages" -name "luci-i18n-amneziawg-ru_*.ipk" -exec cp {} awgrelease/luci-i18n-amneziawg-ru_${postfix}.ipk \; || echo "luci-i18n-amneziawg-ru package not found"
-          find "$SDK_DIR/bin/targets" -name "kmod-amneziawg_*.ipk" -exec cp {} awgrelease/kmod-amneziawg_${postfix}.ipk \; || echo "kmod-amneziawg package not found"
-          
-          echo "Built packages:"
-          ls -la awgrelease/
+          mkdir -p tools
+          cd tools
+          git clone https://github.com/amnezia-vpn/amneziawg-tools.git
+          cd amneziawg-tools
+          go build -o amneziawg
 
-      - name: Release
-        uses: softprops/action-gh-release@v1
-        with:
-          files: awgrelease/*.ipk
-          tag_name: v${{ matrix.build_env.tag }}
+      - name: Build luci-proto-amneziawg
+        run: |
+          mkdir -p luci
+          cd luci
+          git clone https://github.com/amnezia-vpn/luci-proto-amneziawg.git
+
+      - name: Build luci-i18n-amneziawg-ru
+        run: |
+          mkdir -p luci-i18n
+          cd luci-i18n
+          git clone https://github.com/amnezia-vpn/luci-i18n-amneziawg-ru.git
+
+      - name: Package .ipk files
+        run: |
+          mkdir -p out
+
+          # kmod
+          mkdir -p ipk-kmod/CONTROL
+          cat <<EOF > ipk-kmod/CONTROL/control
+          Package: kmod-amneziawg
+          Version: 1-${KERNEL_VERSION}
+          Architecture: ${PKGARCH}
+          Description: AmneziaWG kernel module
+          Depends: kernel (= ${KERNEL_VERSION}-1)
+          EOF
+          mkdir -p ipk-kmod/lib/modules/${KERNEL_VERSION}
+          cp build/amneziawg-linux/src/amneziawg.ko ipk-kmod/lib/modules/${KERNEL_VERSION}/
+          tar -czf out/kmod-amneziawg_${KERNEL_VERSION}.ipk -C ipk-kmod .
+
+          # tools
+          mkdir -p ipk-tools/usr/bin
+          mkdir -p ipk-tools/CONTROL
+          cat <<EOF > ipk-tools/CONTROL/control
+          Package: amneziawg-tools
+          Version: 1
+          Architecture: ${PKGARCH}
+          Description: AmneziaWG tools
+          EOF
+          cp tools/amneziawg-tools/amneziawg ipk-tools/usr/bin/
+          tar -
